// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsPage should match a snapshot when I have the full menu 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-auto"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.div
            classname="el-fade-in"
          >
            <mock-styled.div
              classname=""
            >
              My Apps
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              New App
            </mock-styled.div>
          </mock-styled.div>
          <div
            class="el-fade-in el-mb7"
          >
            <mock-styled.span
              classname="el-mb3 el-icon-size-large"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 80 80"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M66.74 35.076 39.999 25.65v18.992l26.74-9.567Z"
                  fill="#607890"
                />
                <path
                  d="M66.74 35.076 39.997 25.65l-26.74 9.425 26.74 9.567 26.741-9.567Z"
                  fill="#9faebc"
                />
                <path
                  d="M50.578 7.466H28.611c-2.131 0-3.865 1.773-3.865 3.952V58.74c0 2.179 1.734 3.952 3.865 3.952h21.967c2.132 0 3.866-1.773 3.866-3.952V11.418c0-2.179-1.734-3.952-3.866-3.952Z"
                  fill="#d8dee4"
                />
                <path
                  d="M50.566 9.754H47.3a.563.563 0 0 0-.558.57c0 .754-.604 1.372-1.342 1.372H33.764c-.739 0-1.343-.618-1.343-1.373 0-.314-.25-.57-.558-.57H28.6c-.9 0-1.628.746-1.628 1.665v37.337h25.223V11.418c0-.919-.73-1.664-1.629-1.664Z"
                  fill="#d8dee4"
                />
                <path
                  d="m28.935 28.526 10.673-10.488L50.28 28.526v14.483H28.935V28.526Z"
                  fill="#506478"
                />
                <path
                  d="m28.935 28.526 10.673-10.488L50.28 28.526v8.24l-21.345-8.24Z"
                  fill="#8EDDFF"
                />
                <path
                  d="M50.28 43.009h-6.247l-8.85-20.622 4.425-4.349L50.28 28.526v14.483Z"
                  fill="#9faebc"
                />
                <path
                  d="M50.28 28.526v8.24l-10.672-4.068-4.425-10.311 4.425-4.349L50.28 28.526Z"
                  fill="#798da1"
                />
                <path
                  d="M66.74 69.576v-34.5l-26.741 9.593V78.2l26.74-8.624Z"
                  fill="#506478"
                />
                <path
                  d="m39.998 44.67-26.74-9.595v34.501l26.74 8.624V44.67Z"
                  fill="#607890"
                />
                <path
                  d="M13.257 35.076 4 46.214l27.244 10.067 8.754-11.638-26.74-9.567Z"
                  fill="#d8dee4"
                />
                <path
                  d="M66.74 35.076 76 46.214 48.756 56.28l-8.757-11.638 26.74-9.567Z"
                  fill="#7e9bfa"
                />
                <path
                  d="M66.74 35.075 76 46.214 48.756 56.28l-8.757-11.638 26.74-9.568Z"
                  fill="#798da1"
                />
                <path
                  d="M53.859 6.928c1.76-2.89 5.548-3.794 8.46-2.019l9.709 5.922c2.91 1.775 3.843 5.558 2.082 8.448l-5.968 9.793c-1.761 2.89-5.549 3.794-8.46 2.019l-9.71-5.922c-2.91-1.775-3.843-5.558-2.081-8.448l5.968-9.793Z"
                  fill="#7e9bfa"
                />
                <path
                  d="M28.94 26.1a3.73 3.73 0 0 0-.48 5.2l3.317 4.048a3.607 3.607 0 0 0 5.13.47l3.969-3.348a3.73 3.73 0 0 0 .482-5.202L38.04 23.22a3.607 3.607 0 0 0-5.13-.47L28.94 26.1Z"
                  fill="#fff"
                />
                <path
                  d="M15.163 13.013a2.427 2.427 0 0 0-3.072 1.566l-1.426 4.474a2.464 2.464 0 0 0 1.59 3.084l4.364 1.421a2.427 2.427 0 0 0 3.072-1.566l1.427-4.474a2.464 2.464 0 0 0-1.59-3.084l-4.365-1.42Z"
                  fill="#d8dee4"
                />
              </svg>
            </mock-styled.span>
            <mock-styled.p
              classname=""
            >
              Apps Documentation
            </mock-styled.p>
            <mock-styled.p
              classname="el-has-grey-text"
            >
              This is the dashboard for your applications created using the Reapit Foundations platform. If you have not created an app before or you need help, please take the time to view our getting started guide.
            </mock-styled.p>
            <mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.button
                  classname="el-intent-neutral"
                >
                  <mock-styled.div />
                  View Docs
                </mock-styled.button>
              </mock-styled.div>
            </mock-styled.div>
          </div>
        </mock-styled.aside>
        <mock-styled.section
          classname="el-hfull"
        >
          <mock-styled.h1
            classname=""
          >
            My Apps
          </mock-styled.h1>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="el-fade-in mock-css.
  cursor: pointer;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div
                      style="font-size: 1.953125em; width: 50px; height: 50px;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 60 35"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                          fill="#E3E3E3"
                        />
                      </svg>
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname="el-card-sub-heading-wrap-avatar"
                  >
                    <mock-styled.h5>
                      MOCK_APP_NAME
                    </mock-styled.h5>
                    <mock-styled.h6 />
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="el-fade-in mock-css.
  cursor: pointer;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div
                      style="font-size: 1.953125em; width: 50px; height: 50px;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 60 35"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                          fill="#E3E3E3"
                        />
                      </svg>
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname="el-card-sub-heading-wrap-avatar"
                  >
                    <mock-styled.h5>
                      MOCK_APP_NAME_ANOTHER
                    </mock-styled.h5>
                    <mock-styled.h6 />
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          />
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="el-floating-button el-intent-primary"
            >
              <mock-styled.div />
              <mock-styled.span
                classname="el-icon-new"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-auto"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.div
          classname="el-fade-in"
        >
          <mock-styled.div
            classname=""
          >
            My Apps
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            New App
          </mock-styled.div>
        </mock-styled.div>
        <div
          class="el-fade-in el-mb7"
        >
          <mock-styled.span
            classname="el-mb3 el-icon-size-large"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M66.74 35.076 39.999 25.65v18.992l26.74-9.567Z"
                fill="#607890"
              />
              <path
                d="M66.74 35.076 39.997 25.65l-26.74 9.425 26.74 9.567 26.741-9.567Z"
                fill="#9faebc"
              />
              <path
                d="M50.578 7.466H28.611c-2.131 0-3.865 1.773-3.865 3.952V58.74c0 2.179 1.734 3.952 3.865 3.952h21.967c2.132 0 3.866-1.773 3.866-3.952V11.418c0-2.179-1.734-3.952-3.866-3.952Z"
                fill="#d8dee4"
              />
              <path
                d="M50.566 9.754H47.3a.563.563 0 0 0-.558.57c0 .754-.604 1.372-1.342 1.372H33.764c-.739 0-1.343-.618-1.343-1.373 0-.314-.25-.57-.558-.57H28.6c-.9 0-1.628.746-1.628 1.665v37.337h25.223V11.418c0-.919-.73-1.664-1.629-1.664Z"
                fill="#d8dee4"
              />
              <path
                d="m28.935 28.526 10.673-10.488L50.28 28.526v14.483H28.935V28.526Z"
                fill="#506478"
              />
              <path
                d="m28.935 28.526 10.673-10.488L50.28 28.526v8.24l-21.345-8.24Z"
                fill="#8EDDFF"
              />
              <path
                d="M50.28 43.009h-6.247l-8.85-20.622 4.425-4.349L50.28 28.526v14.483Z"
                fill="#9faebc"
              />
              <path
                d="M50.28 28.526v8.24l-10.672-4.068-4.425-10.311 4.425-4.349L50.28 28.526Z"
                fill="#798da1"
              />
              <path
                d="M66.74 69.576v-34.5l-26.741 9.593V78.2l26.74-8.624Z"
                fill="#506478"
              />
              <path
                d="m39.998 44.67-26.74-9.595v34.501l26.74 8.624V44.67Z"
                fill="#607890"
              />
              <path
                d="M13.257 35.076 4 46.214l27.244 10.067 8.754-11.638-26.74-9.567Z"
                fill="#d8dee4"
              />
              <path
                d="M66.74 35.076 76 46.214 48.756 56.28l-8.757-11.638 26.74-9.567Z"
                fill="#7e9bfa"
              />
              <path
                d="M66.74 35.075 76 46.214 48.756 56.28l-8.757-11.638 26.74-9.568Z"
                fill="#798da1"
              />
              <path
                d="M53.859 6.928c1.76-2.89 5.548-3.794 8.46-2.019l9.709 5.922c2.91 1.775 3.843 5.558 2.082 8.448l-5.968 9.793c-1.761 2.89-5.549 3.794-8.46 2.019l-9.71-5.922c-2.91-1.775-3.843-5.558-2.081-8.448l5.968-9.793Z"
                fill="#7e9bfa"
              />
              <path
                d="M28.94 26.1a3.73 3.73 0 0 0-.48 5.2l3.317 4.048a3.607 3.607 0 0 0 5.13.47l3.969-3.348a3.73 3.73 0 0 0 .482-5.202L38.04 23.22a3.607 3.607 0 0 0-5.13-.47L28.94 26.1Z"
                fill="#fff"
              />
              <path
                d="M15.163 13.013a2.427 2.427 0 0 0-3.072 1.566l-1.426 4.474a2.464 2.464 0 0 0 1.59 3.084l4.364 1.421a2.427 2.427 0 0 0 3.072-1.566l1.427-4.474a2.464 2.464 0 0 0-1.59-3.084l-4.365-1.42Z"
                fill="#d8dee4"
              />
            </svg>
          </mock-styled.span>
          <mock-styled.p
            classname=""
          >
            Apps Documentation
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            This is the dashboard for your applications created using the Reapit Foundations platform. If you have not created an app before or you need help, please take the time to view our getting started guide.
          </mock-styled.p>
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.button
                classname="el-intent-neutral"
              >
                <mock-styled.div />
                View Docs
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
        </div>
      </mock-styled.aside>
      <mock-styled.section
        classname="el-hfull"
      >
        <mock-styled.h1
          classname=""
        >
          My Apps
        </mock-styled.h1>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="el-fade-in mock-css.
  cursor: pointer;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    style="font-size: 1.953125em; width: 50px; height: 50px;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 60 35"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                        fill="#E3E3E3"
                      />
                    </svg>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-card-sub-heading-wrap-avatar"
                >
                  <mock-styled.h5>
                    MOCK_APP_NAME
                  </mock-styled.h5>
                  <mock-styled.h6 />
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="el-fade-in mock-css.
  cursor: pointer;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    style="font-size: 1.953125em; width: 50px; height: 50px;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 60 35"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                        fill="#E3E3E3"
                      />
                    </svg>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-card-sub-heading-wrap-avatar"
                >
                  <mock-styled.h5>
                    MOCK_APP_NAME_ANOTHER
                  </mock-styled.h5>
                  <mock-styled.h6 />
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        />
        <mock-styled.div
          classname=""
        >
          <mock-styled.button
            classname="el-floating-button el-intent-primary"
          >
            <mock-styled.div />
            <mock-styled.span
              classname="el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsPage should match a snapshot when apps are loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-auto"
      >
        <mock-styled.section
          classname="el-hfull"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-auto"
    >
      <mock-styled.section
        classname="el-hfull"
      >
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsPage should match a snapshot when apps are present 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-auto"
      >
        <mock-styled.aside
          classname=""
        >
          <mock-styled.div
            classname="el-fade-in"
          >
            <mock-styled.div
              classname=""
            >
              My Apps
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              New App
            </mock-styled.div>
          </mock-styled.div>
          <div
            class="el-fade-in el-mb7"
          >
            <mock-styled.span
              classname="el-mb3 el-icon-size-large"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 80 80"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M66.74 35.076 39.999 25.65v18.992l26.74-9.567Z"
                  fill="#607890"
                />
                <path
                  d="M66.74 35.076 39.997 25.65l-26.74 9.425 26.74 9.567 26.741-9.567Z"
                  fill="#9faebc"
                />
                <path
                  d="M50.578 7.466H28.611c-2.131 0-3.865 1.773-3.865 3.952V58.74c0 2.179 1.734 3.952 3.865 3.952h21.967c2.132 0 3.866-1.773 3.866-3.952V11.418c0-2.179-1.734-3.952-3.866-3.952Z"
                  fill="#d8dee4"
                />
                <path
                  d="M50.566 9.754H47.3a.563.563 0 0 0-.558.57c0 .754-.604 1.372-1.342 1.372H33.764c-.739 0-1.343-.618-1.343-1.373 0-.314-.25-.57-.558-.57H28.6c-.9 0-1.628.746-1.628 1.665v37.337h25.223V11.418c0-.919-.73-1.664-1.629-1.664Z"
                  fill="#d8dee4"
                />
                <path
                  d="m28.935 28.526 10.673-10.488L50.28 28.526v14.483H28.935V28.526Z"
                  fill="#506478"
                />
                <path
                  d="m28.935 28.526 10.673-10.488L50.28 28.526v8.24l-21.345-8.24Z"
                  fill="#8EDDFF"
                />
                <path
                  d="M50.28 43.009h-6.247l-8.85-20.622 4.425-4.349L50.28 28.526v14.483Z"
                  fill="#9faebc"
                />
                <path
                  d="M50.28 28.526v8.24l-10.672-4.068-4.425-10.311 4.425-4.349L50.28 28.526Z"
                  fill="#798da1"
                />
                <path
                  d="M66.74 69.576v-34.5l-26.741 9.593V78.2l26.74-8.624Z"
                  fill="#506478"
                />
                <path
                  d="m39.998 44.67-26.74-9.595v34.501l26.74 8.624V44.67Z"
                  fill="#607890"
                />
                <path
                  d="M13.257 35.076 4 46.214l27.244 10.067 8.754-11.638-26.74-9.567Z"
                  fill="#d8dee4"
                />
                <path
                  d="M66.74 35.076 76 46.214 48.756 56.28l-8.757-11.638 26.74-9.567Z"
                  fill="#7e9bfa"
                />
                <path
                  d="M66.74 35.075 76 46.214 48.756 56.28l-8.757-11.638 26.74-9.568Z"
                  fill="#798da1"
                />
                <path
                  d="M53.859 6.928c1.76-2.89 5.548-3.794 8.46-2.019l9.709 5.922c2.91 1.775 3.843 5.558 2.082 8.448l-5.968 9.793c-1.761 2.89-5.549 3.794-8.46 2.019l-9.71-5.922c-2.91-1.775-3.843-5.558-2.081-8.448l5.968-9.793Z"
                  fill="#7e9bfa"
                />
                <path
                  d="M28.94 26.1a3.73 3.73 0 0 0-.48 5.2l3.317 4.048a3.607 3.607 0 0 0 5.13.47l3.969-3.348a3.73 3.73 0 0 0 .482-5.202L38.04 23.22a3.607 3.607 0 0 0-5.13-.47L28.94 26.1Z"
                  fill="#fff"
                />
                <path
                  d="M15.163 13.013a2.427 2.427 0 0 0-3.072 1.566l-1.426 4.474a2.464 2.464 0 0 0 1.59 3.084l4.364 1.421a2.427 2.427 0 0 0 3.072-1.566l1.427-4.474a2.464 2.464 0 0 0-1.59-3.084l-4.365-1.42Z"
                  fill="#d8dee4"
                />
              </svg>
            </mock-styled.span>
            <mock-styled.p
              classname=""
            >
              Apps Documentation
            </mock-styled.p>
            <mock-styled.p
              classname="el-has-grey-text"
            >
              This is the dashboard for your applications created using the Reapit Foundations platform. If you have not created an app before or you need help, please take the time to view our getting started guide.
            </mock-styled.p>
            <mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.button
                  classname="el-intent-neutral"
                >
                  <mock-styled.div />
                  View Docs
                </mock-styled.button>
              </mock-styled.div>
            </mock-styled.div>
          </div>
        </mock-styled.aside>
        <mock-styled.section
          classname="el-hfull"
        >
          <mock-styled.h1
            classname=""
          >
            My Apps
          </mock-styled.h1>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="el-fade-in mock-css.
  cursor: pointer;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div
                      style="font-size: 1.953125em; width: 50px; height: 50px;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 60 35"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                          fill="#E3E3E3"
                        />
                      </svg>
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname="el-card-sub-heading-wrap-avatar"
                  >
                    <mock-styled.h5>
                      MOCK_APP_NAME
                    </mock-styled.h5>
                    <mock-styled.h6 />
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="el-fade-in mock-css.
  cursor: pointer;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div
                      style="font-size: 1.953125em; width: 50px; height: 50px;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 60 35"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                          fill="#E3E3E3"
                        />
                      </svg>
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname="el-card-sub-heading-wrap-avatar"
                  >
                    <mock-styled.h5>
                      MOCK_APP_NAME_ANOTHER
                    </mock-styled.h5>
                    <mock-styled.h6 />
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          />
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="el-floating-button el-intent-primary"
            >
              <mock-styled.div />
              <mock-styled.span
                classname="el-icon-new"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-auto"
    >
      <mock-styled.aside
        classname=""
      >
        <mock-styled.div
          classname="el-fade-in"
        >
          <mock-styled.div
            classname=""
          >
            My Apps
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            New App
          </mock-styled.div>
        </mock-styled.div>
        <div
          class="el-fade-in el-mb7"
        >
          <mock-styled.span
            classname="el-mb3 el-icon-size-large"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M66.74 35.076 39.999 25.65v18.992l26.74-9.567Z"
                fill="#607890"
              />
              <path
                d="M66.74 35.076 39.997 25.65l-26.74 9.425 26.74 9.567 26.741-9.567Z"
                fill="#9faebc"
              />
              <path
                d="M50.578 7.466H28.611c-2.131 0-3.865 1.773-3.865 3.952V58.74c0 2.179 1.734 3.952 3.865 3.952h21.967c2.132 0 3.866-1.773 3.866-3.952V11.418c0-2.179-1.734-3.952-3.866-3.952Z"
                fill="#d8dee4"
              />
              <path
                d="M50.566 9.754H47.3a.563.563 0 0 0-.558.57c0 .754-.604 1.372-1.342 1.372H33.764c-.739 0-1.343-.618-1.343-1.373 0-.314-.25-.57-.558-.57H28.6c-.9 0-1.628.746-1.628 1.665v37.337h25.223V11.418c0-.919-.73-1.664-1.629-1.664Z"
                fill="#d8dee4"
              />
              <path
                d="m28.935 28.526 10.673-10.488L50.28 28.526v14.483H28.935V28.526Z"
                fill="#506478"
              />
              <path
                d="m28.935 28.526 10.673-10.488L50.28 28.526v8.24l-21.345-8.24Z"
                fill="#8EDDFF"
              />
              <path
                d="M50.28 43.009h-6.247l-8.85-20.622 4.425-4.349L50.28 28.526v14.483Z"
                fill="#9faebc"
              />
              <path
                d="M50.28 28.526v8.24l-10.672-4.068-4.425-10.311 4.425-4.349L50.28 28.526Z"
                fill="#798da1"
              />
              <path
                d="M66.74 69.576v-34.5l-26.741 9.593V78.2l26.74-8.624Z"
                fill="#506478"
              />
              <path
                d="m39.998 44.67-26.74-9.595v34.501l26.74 8.624V44.67Z"
                fill="#607890"
              />
              <path
                d="M13.257 35.076 4 46.214l27.244 10.067 8.754-11.638-26.74-9.567Z"
                fill="#d8dee4"
              />
              <path
                d="M66.74 35.076 76 46.214 48.756 56.28l-8.757-11.638 26.74-9.567Z"
                fill="#7e9bfa"
              />
              <path
                d="M66.74 35.075 76 46.214 48.756 56.28l-8.757-11.638 26.74-9.568Z"
                fill="#798da1"
              />
              <path
                d="M53.859 6.928c1.76-2.89 5.548-3.794 8.46-2.019l9.709 5.922c2.91 1.775 3.843 5.558 2.082 8.448l-5.968 9.793c-1.761 2.89-5.549 3.794-8.46 2.019l-9.71-5.922c-2.91-1.775-3.843-5.558-2.081-8.448l5.968-9.793Z"
                fill="#7e9bfa"
              />
              <path
                d="M28.94 26.1a3.73 3.73 0 0 0-.48 5.2l3.317 4.048a3.607 3.607 0 0 0 5.13.47l3.969-3.348a3.73 3.73 0 0 0 .482-5.202L38.04 23.22a3.607 3.607 0 0 0-5.13-.47L28.94 26.1Z"
                fill="#fff"
              />
              <path
                d="M15.163 13.013a2.427 2.427 0 0 0-3.072 1.566l-1.426 4.474a2.464 2.464 0 0 0 1.59 3.084l4.364 1.421a2.427 2.427 0 0 0 3.072-1.566l1.427-4.474a2.464 2.464 0 0 0-1.59-3.084l-4.365-1.42Z"
                fill="#d8dee4"
              />
            </svg>
          </mock-styled.span>
          <mock-styled.p
            classname=""
          >
            Apps Documentation
          </mock-styled.p>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            This is the dashboard for your applications created using the Reapit Foundations platform. If you have not created an app before or you need help, please take the time to view our getting started guide.
          </mock-styled.p>
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.button
                classname="el-intent-neutral"
              >
                <mock-styled.div />
                View Docs
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
        </div>
      </mock-styled.aside>
      <mock-styled.section
        classname="el-hfull"
      >
        <mock-styled.h1
          classname=""
        >
          My Apps
        </mock-styled.h1>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="el-fade-in mock-css.
  cursor: pointer;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    style="font-size: 1.953125em; width: 50px; height: 50px;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 60 35"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                        fill="#E3E3E3"
                      />
                    </svg>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-card-sub-heading-wrap-avatar"
                >
                  <mock-styled.h5>
                    MOCK_APP_NAME
                  </mock-styled.h5>
                  <mock-styled.h6 />
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="el-fade-in mock-css.
  cursor: pointer;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    style="font-size: 1.953125em; width: 50px; height: 50px;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 60 35"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                        fill="#E3E3E3"
                      />
                    </svg>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-card-sub-heading-wrap-avatar"
                >
                  <mock-styled.h5>
                    MOCK_APP_NAME_ANOTHER
                  </mock-styled.h5>
                  <mock-styled.h6 />
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        />
        <mock-styled.div
          classname=""
        >
          <mock-styled.button
            classname="el-floating-button el-intent-primary"
          >
            <mock-styled.div />
            <mock-styled.span
              classname="el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsPage should match a snapshot when no apps are created 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-flex-auto"
      >
        <mock-styled.section
          classname="el-hfull"
        >
          <mock-styled.h1
            classname=""
          >
            My Apps
          </mock-styled.h1>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="el-fade-in mock-css.
  cursor: pointer;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div
                      style="font-size: 1.953125em; width: 50px; height: 50px;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 60 35"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                          fill="#E3E3E3"
                        />
                      </svg>
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname="el-card-sub-heading-wrap-avatar"
                  >
                    <mock-styled.h5>
                      MOCK_APP_NAME
                    </mock-styled.h5>
                    <mock-styled.h6 />
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                classname="el-fade-in mock-css.
  cursor: pointer;
"
              >
                <mock-styled.div>
                  <mock-styled.div
                    classname=""
                  >
                    <mock-styled.div
                      style="font-size: 1.953125em; width: 50px; height: 50px;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 60 35"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                          fill="#E3E3E3"
                        />
                      </svg>
                    </mock-styled.div>
                  </mock-styled.div>
                  <mock-styled.div
                    classname="el-card-sub-heading-wrap-avatar"
                  >
                    <mock-styled.h5>
                      MOCK_APP_NAME_ANOTHER
                    </mock-styled.h5>
                    <mock-styled.h6 />
                    <mock-styled.h6 />
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          />
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="el-floating-button el-intent-primary"
            >
              <mock-styled.div />
              <mock-styled.span
                classname="el-icon-new"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-flex-auto"
    >
      <mock-styled.section
        classname="el-hfull"
      >
        <mock-styled.h1
          classname=""
        >
          My Apps
        </mock-styled.h1>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="el-fade-in mock-css.
  cursor: pointer;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    style="font-size: 1.953125em; width: 50px; height: 50px;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 60 35"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                        fill="#E3E3E3"
                      />
                    </svg>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-card-sub-heading-wrap-avatar"
                >
                  <mock-styled.h5>
                    MOCK_APP_NAME
                  </mock-styled.h5>
                  <mock-styled.h6 />
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="el-fade-in mock-css.
  cursor: pointer;
"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    style="font-size: 1.953125em; width: 50px; height: 50px;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 60 35"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                        fill="#E3E3E3"
                      />
                    </svg>
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-card-sub-heading-wrap-avatar"
                >
                  <mock-styled.h5>
                    MOCK_APP_NAME_ANOTHER
                  </mock-styled.h5>
                  <mock-styled.h6 />
                  <mock-styled.h6 />
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        />
        <mock-styled.div
          classname=""
        >
          <mock-styled.button
            classname="el-floating-button el-intent-primary"
          >
            <mock-styled.div />
            <mock-styled.span
              classname="el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
